[package]
name = "chain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rustc-hex = "2"
heapsize = "0.4"
rug = "1.3.0"
ecvrf = { git = "https://github.com/rand-chain/ECVRF" , rev = "b6f35af" }
rayon = "1.0"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
spow = { path = "../spow" }

[features]
default = []
test-helpers = []
