[package]
name = "chain"
version = "0.1.0"
authors = [ "debris <marek.kotewicz@gmail.com>" ]

[dependencies]
bitcrypto = { path = "../crypto" }
ecvrf = "0.4.2"
heapsize = "0.4"
primitives = { path = "../primitives" }
rayon = "1.0"
rug = "1.3.0"
rustc-hex = "2"
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
vdf = { path = "../vdf" }

[features]
default = [ ]
test-helpers = [ ]
