[package]
name = "db"
version = "0.1.0"
authors = [ "Parity Technologies <admin@parity.io>" ]

[dependencies]
bit-vec = "0.4"
chain = { path = "../chain" }
elastic-array = "0.6"
log = "0.4"
lru-cache = "0.1"
parking_lot = "0.4"
primitives = { path = "../primitives" }
parity-rocksdb = { git = "https://github.com/ethcore/rust-rocksdb" }
serialization = { path = "../serialization" }
storage = { path = "../storage" }

[dev-dependencies]
tempdir = "0.3"
test-data = { path = "../test-data" }
