[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rand = "0.7"
rustc-hex = "2"
lazy_static = "1.4.0"
base58 = "0.1"
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
