[package]
name = "message"
version = "0.1.0"
authors = [ "debris <marek.kotewicz@gmail.com>" ]

[dependencies]
bitcrypto = { path = "../crypto" }
byteorder = "1.0"
chain = { path = "../chain" }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
