[package]
name = "miner"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
ureq = { version = "1.5.4", features = ["json", "charset"] }
log = "0.4"
env_logger = "0.5"
byteorder = "1.0"
rustc-hex = "2"
bigint = "1.0"
heapsize = "0.4"
ecvrf = "0.4.2"
rug = "1.3.0"
sha2 = "0.9.1"
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
storage = { path = "../storage" }
db = { path = "../db" }
network = { path = "../network" }
vdf = { path = "../vdf" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }

[[bin]]
name = "miner"
path = "bin/client.rs"

[dev-dependencies]
test-data = { path = "../test-data" }

[features]
test-helpers = []