[package]
name = "miner"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
bigint = "1.0"
heapsize = "0.4"
ecvrf = "0.4.2"
rug = "1.3.0"
sha2 = "0.9.1"
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
storage = { path = "../storage" }
db = { path = "../db" }
network = { path = "../network" }
vdf = { path = "../vdf" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }

[dev-dependencies]
test-data = { path = "../test-data" }

[features]
test-helpers = []