[package]
name = "miner"
version = "0.1.0"
authors = [ "Ethcore <admin@ethcore.io>" ]

[dependencies]
bigint = "1.0"
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
db = { path = "../db" }
ecvrf = "0.4.2"
heapsize = "0.4"
network = { path = "../network" }
primitives = { path = "../primitives" }
rand = "0.7"
rug = "1.3.0"
serialization = { path = "../serialization" }
sha2 = "0.9.1"
storage = { path = "../storage" }
vdf = { path = "../vdf" }
verification = { path = "../verification" }

[dev-dependencies]
test-data = { path = "../test-data" }

[features]
test-helpers = [ ]
