[package]
name = "p2p"
version = "0.1.0"
authors = [ "debris <marek.kotewicz@gmail.com>" ]

[dependencies]
abstract-ns = "0.3"
bitcrypto = { path = "../crypto" }
csv = "1"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
message = { path = "../message" }
network = { path = "../network" }
ns-dns-tokio = "0.3"
parking_lot = "0.4"
primitives = { path = "../primitives" }
rand = "0.7"
serialization = { path = "../serialization" }
time = "0.1"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
