[package]
name = "rpc"
version = "0.1.0"
authors = [ "Ethcore <admin@ethcore.io>" ]

[lib]

[dependencies]
chain = { path = "../chain" }
db = { path = "../db" }
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-macros = { git = "https://github.com/ethcore/jsonrpc.git" }
log = "0.4"
miner = { path = "../miner" }
message = { path = "../message"}
network = { path = "../network" }
p2p = { path = "../p2p" }
primitives = { path = "../primitives" }
rug = "1.3.0"
rustc-hex = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serialization = { path = "../serialization" }
storage = { path = "../storage" }
sync = { path = "../sync" }
tokio-core = "0.1.1"
verification = { path = "../verification" }

[dev-dependencies]
test-data = { path = "../test-data" }
