[package]
name = "storage"
version = "0.1.0"
authors = [ "Parity Technologies <admin@parity.io>" ]

[dependencies]
bit-vec = "0.4"
chain = { path = "../chain" }
display_derive = "0.0.0"
elastic-array = "0.6"
lru-cache = "0.1"
network = { path = "../network" }
parking_lot = "0.4"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
