[package]
name = "sync"
version = "0.1.0"
authors = [ "Ethcore <admin@ethcore.io>" ]

[dependencies]
bit-vec = "0.4.3"
crypto = { path = "../crypto" }
byteorder = "1.0"

chain = { path = "../chain" }
db = { path = "../db" }
futures = "0.1"
linked-hash-map = "0.3"
log = "0.4"
message = { path = "../message" }
miner = { path = "../miner" }
murmur3 = "0.4"
network = { path = "../network" }
p2p = { path = "../p2p" }
parking_lot = "0.4"
primitives = { path = "../primitives" }
rand = "0.7"
serialization = { path = "../serialization" }
storage = { path = "../storage" }
time = "0.1"
verification = { path = "../verification" }

[dev-dependencies]
chain = { path = "../chain", features = [ "test-helpers" ] }
miner = { path = "../miner", features = [ "test-helpers" ] }
test-data = { path = "../test-data" }
