[package]
name = "test-data"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"
rug = "1.3.0"
chain = { path = "../chain" , features = ["test-helpers"] }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
bitcrypto = { path = "../crypto" }
