[package]
name = "verification"
version = "0.1.0"
authors = [ "Nikolay Volf <nikvolf@gmail.com>" ]

[dependencies]
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
lazy_static = "1.0"
log = "0.4"
network = { path = "../network" }
parking_lot = "0.4"
primitives = { path = "../primitives" }
rayon = "1.0"
rug = "1.3.0"
serialization = { path = "../serialization" }
sha2 = "0.9.1"
storage = { path = "../storage" }
time = "0.1"

[dev-dependencies]
assert_matches = "1.3.0"
chain = { path = "../chain", features = [ "test-helpers" ] }
db = { path = "../db" }
test-data = { path = "../test-data" }
